--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "sweetalert2": "^11.3.6",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
